--- a/kpi/kpi-frontend-app/package.json
+++ b/kpi/kpi-frontend-app/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "next": "14.2.13",
+    "react-chartjs-2": "^4.0.0",
+    "chart.js": "^4.0.0",
+    "@heroicons/react": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
