--- a/kpi/kpi-frontend-app/package.json
+++ b/kpi/kpi-frontend-app/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+  "react-dom": "^18",
     "next": "14.2.13",
-    "react-chartjs-2": "^4.3.1",
-    "chart.js": "^3.5.0",  
-    "@heroicons/react": "^2.0.0"
+    "react-chartjs-2": "^4.0.0",
+    "chart.js": "^3.5.0",
+    "@heroicons/react": "^2.0.0",
+    "react-icons": "^4.3.1",          
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "typescript": "^5",
