--- a/kpi/kpi-frontend-app/package.json
+++ b/kpi/kpi-frontend-app/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "react-dom": "^18",
+    "@heroicons/react": "^2.0.0",
+    "chart.js": "^3.5.0",
     "next": "14.2.13",
     "react-chartjs-2": "^4.0.0",
-    "chart.js": "^3.5.0",
-    "@heroicons/react": "^2.0.0",
-    "react-icons": "^4.3.1",          
-    "react-hot-toast": "^2.4.0"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
