--- a/data-layer-microservice/server/package.json
+++ b/data-layer-microservice/server/package.json
@@ -19,7 +19,8 @@
     "@prisma/client": "^5.22.0",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@prisma/engines": "^5.22.0",
