--- a/data-layer-microservice/server/package.json
+++ b/data-layer-microservice/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "pg": "^8.13.1",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
