--- a/kpi/backend/package.json
+++ b/kpi/backend/package.json
@@ -4,7 +4,7 @@
   "description": "This service scraps data from other microsevices, calculates the kpi, stores and serves them via its api endpoints",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js", 
+    "start": "node dist/app.js",
     "dev": "nodemon",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,8 @@
   "author": "corneliusdevs",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
