--- a/central-systems/backend/server/package.json
+++ b/central-systems/backend/server/package.json
@@ -12,9 +12,13 @@
   "author": "corneliusdevs",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.1",
     "nodemon": "^3.1.7",
