--- a/central-systems/frontend/client/package.json
+++ b/central-systems/frontend/client/package.json
@@ -28,7 +28,8 @@
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-form-data": "^2.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
