--- a/data-layer-microservice/server/package.json
+++ b/data-layer-microservice/server/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@types/nodemailer": "^6.4.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "nodemailer": "^6.9.16",
