--- a/kpi/backend/package.json
+++ b/kpi/backend/package.json
@@ -12,6 +12,7 @@
   "author": "corneliusdevs",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "zod": "^3.23.8"
   },
