--- a/central-systems/backend/server/package.json
+++ b/central-systems/backend/server/package.json
@@ -12,14 +12,18 @@
   "author": "corneliusdevs",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
