--- a/central-systems/frontend/client/package.json
+++ b/central-systems/frontend/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
@@ -33,8 +34,10 @@
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1",
-    "zod-form-data": "^2.0.4"
+    "zod-form-data": "^2.0.4",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
