--- a/central-systems/frontend/client/package.json
+++ b/central-systems/frontend/client/package.json
@@ -32,6 +32,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
