fixing nginx upstream config directive and installing open ssl library for prisma in data-layer-micorservice docker file

--- a/deployment/nginx/nginx.conf
+++ b/deployment/nginx/nginx.conf
@@ -108,18 +108,58 @@
 #   }
 # }
 
+# http {
+#     # other http configurations...
+
+#     server {
+#         listen 80;
+
+#         # Define upstream for backend services (using Docker Compose service names)
+#         upstream backend {
+#             server cms-backend:5003;
+#             server kpi-backend:4999;
+#             server cms-data-layer-backend:5000;
+#         }
+
+#         # Routes requests to the frontend (Next.js)
+#         location / {
+#             proxy_pass http://cms-frontend:3000;  # Docker Compose service name
+#             proxy_http_version 1.1;
+#             proxy_set_header Upgrade $http_upgrade;
+#             proxy_set_header Connection 'upgrade';
+#             proxy_set_header Host $host;
+#             proxy_cache_bypass $http_upgrade;
+#         }
+
+#         # API Gateway - forward API requests to the appropriate backend
+#         location /api/ {
+#             proxy_pass http://backend;  # Forward requests to backend upstream
+#             proxy_http_version 1.1;
+#             proxy_set_header Upgrade $http_upgrade;
+#             proxy_set_header Connection 'upgrade';
+#             proxy_set_header Host $host;
+#             proxy_cache_bypass $http_upgrade;
+#         }
+
+#         # Catch-all for assets
+#         location /assets/ {
+#             proxy_pass http://cms-frontend:3000/assets/;  # Frontend service
+#         }
+#     }
+# }
+
 http {
-    # other http configurations...
+    # Other HTTP configurations...
+
+    # Define upstream for backend services (using Docker Compose service names)
+    upstream backend {
+        server cms-backend:5003;
+        server kpi-backend:4999;
+        server cms-data-layer-backend:5000;
+    }
 
     server {
         listen 80;
-
-        # Define upstream for backend services (using Docker Compose service names)
-        upstream backend {
-            server cms-backend:5003;
-            server kpi-backend:4999;
-            server cms-data-layer-backend:5000;
-        }
 
         # Routes requests to the frontend (Next.js)
         location / {
@@ -147,4 +187,3 @@ http {
         }
     }
 }
-
