installing open ssl library for prisma in data-layer-micorservice docker file

--- a/data-layer-microservice/server/Dockerfile
+++ b/data-layer-microservice/server/Dockerfile
@@ -1,11 +1,16 @@
+
+
 # # Step 1: Use an official Node.js image as the build environment
 # FROM node:18 AS builder
+
+# # Install OpenSSL 1.1 for prisma client generation
+# RUN apt-get update && apt-get install -y libssl1.1
 
 # # Step 2: Set the working directory
 # WORKDIR /app
 
 # # Step 3: Copy package.json and package-lock.json (or yarn.lock)
-# COPY package*.json ./
+# COPY package*.json ./ 
 
 # # Step 4: Install dependencies (both production and development)
 # RUN npm install
@@ -13,30 +18,32 @@
 # # Step 5: Copy the rest of the application files
 # COPY . .
 
-# # Step 6: Compile TypeScript code to JavaScript
+# # Step 6: Generate Prisma client for MongoDB and PostgreSQL
+# RUN npm run prisma-generate-mongodb
+# RUN npm run prisma-generate-postgresql
+
+# # Step 7: Compile TypeScript code to JavaScript
 # RUN npm run build
 
-# # Step 7: Use a smaller base image for production (node:16-slim)
+# # Step 8: Use a smaller base image for production (node:18-slim)
 # FROM node:18-slim
 
-# # Step 8: Set the working directory for production
+# # Step 9: Set the working directory for production
 # WORKDIR /app
 
-# # Step 9: Copy the compiled app from the builder stage
+# # Step 10: Copy the compiled app from the builder stage
 # COPY --from=builder /app ./
 
-# # Step 10: Expose the port the app will run on
+# # Step 11: Expose the port the app will run on
 # EXPOSE 5000
 
-# # Step 11: Start the application
+# # Step 12: Start the application
 # CMD ["node", "dist/app.js"]
 
-
-# Step 1: Use an official Node.js image as the build environment
 FROM node:18 AS builder
 
-# Install OpenSSL 1.1 for prisma client generation
-RUN apt-get update && apt-get install -y libssl1.1
+# Install OpenSSL 3.0 for prisma client generation (compatible with newer Debian versions)
+RUN apt-get update && apt-get install -y libssl3
 
 # Step 2: Set the working directory
 WORKDIR /app
@@ -48,7 +55,7 @@ COPY package*.json ./
 RUN npm install
 
 # Step 5: Copy the rest of the application files
-COPY . .
+COPY . . 
 
 # Step 6: Generate Prisma client for MongoDB and PostgreSQL
 RUN npm run prisma-generate-mongodb
@@ -64,10 +71,11 @@ FROM node:18-slim
 WORKDIR /app
 
 # Step 10: Copy the compiled app from the builder stage
-COPY --from=builder /app ./
+COPY --from=builder /app ./ 
 
 # Step 11: Expose the port the app will run on
 EXPOSE 5000
 
 # Step 12: Start the application
 CMD ["node", "dist/app.js"]
+
