added events in nginx conf file and congifuring schema for docker to be using open ssl 3

--- a/deployment/nginx/nginx.conf
+++ b/deployment/nginx/nginx.conf
@@ -148,8 +148,13 @@
 #     }
 # }
 
+events {
+    worker_connections 1024;  # Start with 512 connections per worker
+}
+
 http {
     # Other HTTP configurations...
+
 
     # Define upstream for backend services (using Docker Compose service names)
     upstream backend {
