Configuring frontend to serve images

--- a/deployment/nginx/nginx.conf
+++ b/deployment/nginx/nginx.conf
@@ -187,8 +187,8 @@ http {
         }
 
         # Catch-all for assets
-        location /assets/ {
-            proxy_pass http://cms-frontend:3000/assets/;  # Frontend service
-        }
+        # location /assets/ {
+        #     proxy_pass http://cms-frontend:3000/assets/;  # Frontend service
+        # }
     }
 }
