fixing prisma error indata-layer-backend container

--- a/data-layer-microservice/server/Dockerfile
+++ b/data-layer-microservice/server/Dockerfile
@@ -223,7 +223,7 @@
 FROM node:18-bullseye AS builder
 
 # Install OpenSSL 3.0 for Prisma client generation
-RUN apt-get update && apt-get install -y openssl libssl3
+RUN apt-get update && apt-get install -y openssl3 libssl3
 
 # Set working directory
 WORKDIR /app
@@ -253,7 +253,7 @@ FROM node:18-bullseye-slim
 # RUN apt-get update && apt-get install -y openssl libssl1.1 libssl3
 
 # Install OpenSSL 1.1 and 3.0 to support both binary targets
-RUN apt-get update && apt-get install -y openssl libssl3
+RUN apt-get update && apt-get install -y libssl1.1 libssl3
 
 WORKDIR /app
 
