--- a/data-layer-microservice/server/Dockerfile
+++ b/data-layer-microservice/server/Dockerfile
@@ -247,7 +247,7 @@ COPY src ./src
 RUN npm run build
 
 # Step 2: Production Stage
-FROM node:18-slim
+FROM node:18
 
 # Install libssl1.1 (THIS IS THE KEY CHANGE)
 RUN apt-get update && apt-get install -y libssl1.1
