--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
       - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
       - CLOUDINARY_API_ENV_VARIABLE=${CLOUDINARY_API_ENV_VARIABLE}
+    extra_hosts:
+        - "host.docker.internal:host-gateway"
 
   # Backend (Express.js) for CMS
   cms-backend:
