--- a/central-systems/frontend/client/package.json
+++ b/central-systems/frontend/client/package.json
@@ -44,9 +44,11 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
